# lbaseconv

./: CMakeLists.txt  LICENSE  README.md
cmake/: GoogleTest.cmake.in  LibraryTest.cmake.in
include/lbaseconv/: baseconv.h  bin2dec.h  bin2hex.h  bin2int.h  bin2oct.h  dec2bin.h  dec2hex.h  dec2oct.h  hex2bin.h  hex2dec.h  hex2oct.h  oct2bin.h  oct2dec.h  oct2hex.h
include/lbaseconv/util/: ascii_hex.h  invert_string.h  string.h
src/: bin2dec.c  bin2hex.c  bin2int.c  bin2oct.c  dec2bin.c  dec2hex.c  dec2oct.c  hex2bin.c  hex2dec.c  hex2oct.c  oct2bin.c  oct2dec.c  oct2hex.c
src/util/: invert_string.c  string.c
test/: CMakeLists.txt  bin2dec.cpp  bin2hex.cpp  bin2int.cpp  bin2oct.cpp
